Add example for using Java records as entity attributes that are persisted as JSON columns